--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
   padding: 0.1em 0.4em;
   box-shadow: inset 0 -0.5em 0 rgba(131, 58, 180, 0.3);
   transition: box-shadow 0.3s ease-in-out;
+  cursor: pointer;
 }
 .text:hover {
   box-shadow: inset 0 -1.5em 0 rgba(131, 58, 180, 0.5);
