--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   height: 100vh;
-  background-color: #161616;
+  background-color: #fff;
   font-family: "Roboto Mono", monospace;
   display: grid;
   place-items: center;
@@ -20,12 +20,12 @@ body {
   font-size: 2rem;
   font-weight: bold;
   letter-spacing: 0.2em;
-  color: #f4f4f4;
+  color: #161616;
   padding: 0.1em 0.4em;
-  box-shadow: inset 0 -0.5em 0 rgba(131, 58, 180, 0.3);
+  box-shadow: inset 0 -0.5em 0 rgba(192, 35, 100, 0.3);
   transition: box-shadow 0.3s ease-in-out;
   cursor: pointer;
 }
 .text:hover {
-  box-shadow: inset 0 -1.5em 0 rgba(131, 58, 180, 0.5);
+  box-shadow: inset 0 -1.5em 0 rgba(192, 35, 100, 0.5);
 }
